# fast-feature

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
examples/: embed_in_fastapi.py  standalone.py
scripts/: set_version.py
src/fast_feature/: __init__.py
src/fast_feature/domain/: errors.py  evaluation.py  flag.py
src/fast_feature/targeting/: __init__.py  engine.py  operators.py
tests/: test_domain.py  test_jsonlogic.py  test_operators.py
tests/unit-test/domain/: test_evaluation.py  test_flag.py
tests/unit-test/targeting/: test_engine.py
